syntax = "proto3";

package followerdb;

option go_package = "github.com/haguru/horus/followerdb/internal/routes/protos";

message Follow {
  // @gotags: bson:"userId,omitempty" validate:"required"
  string id = 1;
  // @gotags: bson:"followerUserId,omitempty" validate:"required"
  string follower_id = 2;
}

message Id{
  string value = 1;
}

message Status {
  int32 value = 1;
}

message GetFollowersRequest {
  string userId = 1;
  int32 page = 2;
  int32 pageSize = 3;
}

// TODO
service FollowerDB{
  rpc AddFollow(Follow) returns (Id);                          // Create
  rpc GetFollowers(GetFollowersRequest) returns (stream Id);                // Read
  rpc Unfollow(Follow) returns (Status);               // Delete
}
